--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:description" content="Vez los resultado de tu loteria nacional.">
     <meta property="og:url" content="www.ahoratuloteria.com">
     <meta name="robots" content="index, follow">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1546458288326276"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
