--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta property="og:description" content="Vez los resultado de tu loteria nacional.">
     <meta property="og:url" content="www.ahoratuloteria.com">
     <meta name="robots" content="index, follow">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1546458288326276"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-1546458288326276">
   </head>
   <body>
     <div id="root"></div>
