--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="www.ahoratuloteria.com">
     <meta name="robots" content="index, follow">
     <meta name="google-adsense-account" content="ca-pub-1546458288326276">
+    <meta name="google-site-verification" content="HWLHjt_oj1mLv5kHqe__36mIuWtxMebsbOTTDwrydA4" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1546458288326276"
      crossorigin="anonymous"></script>
   </head>
