--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahora tu Loteria</title>
-    <meta name="description" content="Descripción breve de tu página, optimizada para SEO.">
+    <meta name="description" content="Esta es una pagina diseñada para mostrar los resultadod de la loteria dominicana.">
     <meta name="keywords" content="loteria dominincana, Loteria nacional, Loteka, Leidsa">
     <meta name="author" content="Ahora tu Loteria">
     <meta property="og:title" content="Ahora tu Loteria">
