--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahora tu Loteria</title>
-    <meta name="description" content="Descripción breve de tu página, optimizada para SEO.">
+    <meta name="description" content="Esta es una pagina diseñada para mostrar los resultadod de la loteria dominicana.">
     <meta name="keywords" content="loteria dominincana, Loteria nacional, Loteka, Leidsa">
     <meta name="author" content="Ahora tu Loteria">
     <meta property="og:title" content="Ahora tu Loteria">
     <meta property="og:description" content="Vez los resultado de tu loteria nacional.">
     <meta property="og:url" content="www.ahoratuloteria.com">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-1546458288326276">
+    <meta name="google-site-verification" content="HWLHjt_oj1mLv5kHqe__36mIuWtxMebsbOTTDwrydA4" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1546458288326276"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-59G3TTX3');</script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-79K09FM1YY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-79K09FM1YY');
+</script>
+     
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59G3TTX3"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
