--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./public/ico_ahoratuloteria.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahora tu Loteria</title>
     <meta name="description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida">
