--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/ico_ahoratuloteria.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ahora tu Loteria</title>
-    <meta name="description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida">
+    <title>Ahora tu Loteria - Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida</title>
+    <meta name="description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom">
     <meta name="keywords" content="loteria dominincana, Loteria nacional, Loteka, Leidsa">
     <meta name="author" content="Ahora tu Loteria">
     <meta property="og:title" content="Ahora tu Loteria">
-    <meta property="og:description" content="Vez los resultado de tu loteria nacional.">
+    <meta property="og:description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida">
     <meta property="og:url" content="www.ahoratuloteria.com">
     <meta name="robots" content="index, follow">
     <meta name="google-adsense-account" content="ca-pub-1546458288326276">
