--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka, LotoDom, New York y Florida">
     <meta name="keywords" content="loteria dominincana, Loteria nacional, Loteka, Leidsa">
     <meta name="author" content="Ahora tu Loteria">
-    <meta property="og:title" content="Ahora tu Loteria">
+    <meta property="og:title" content="AhoratuLoteria.com">
     <meta property="og:description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida">
     <meta property="og:url" content="www.ahoratuloteria.com">
     <meta name="robots" content="index, follow">
