--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Ahoratuloteria.com">
     <meta property="og:description" content="Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida">
     <meta property="og:url" content="www.ahoratuloteria.com">
+    <meta property="og:image" content="https://map.gob.do/COEDOM/Images/LogosOrganismos/92.jpg">
     <meta name="robots" content="index, follow">
     <meta name="google-adsense-account" content="ca-pub-1546458288326276">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1546458288326276"
