--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahora tu Loteria - Resultados de Loteria Nacional, Leidsa, Loteria Real, La Primera, La Suerte, Loteka LotoDom, New York y Florida</title>
     <meta name="description" content="Resultados y números ganadores de la Lotería Nacional, Leidsa, Lotería Real, La Primera, La Suerte, Loteka, LotoDom, New York y Florida.">
-    <meta name="keywords" content="loteria dominincana, Loteria nacional, Loteka, Leidsa">
+    <meta name="keywords" content="Resultados,Lotería Nacional, Leidsa, Lotería Real, La Primera, La Suerte, Loteka, LotoDom, New York y Florida">
     <meta name="author" content="Ahora tu Loteria">
     <meta property="og:title" content="Ahoratuloteria.com">
     <meta property="og:description" content="Resultados y números ganadores de la Lotería Nacional, Leidsa, Lotería Real, La Primera, La Suerte, Loteka, LotoDom, New York y Florida.">
